# Aeolus

./: .gitignore  ARCHITECTURE.md  KNOWN_RISKS.md  MATHEMATICAL_MODEL.md  README.md  VALIDATION_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  KNOWN_LIMITATIONS.md  KNOWN_RISKS.md  MATHEMATICAL_MODEL.md  PRIMITIVE_EQUATIONS_DESIGN.md  PRIMITIVE_EQUATIONS_RUNNER.md  PRIMITIVE_EQUATIONS_TENDENCY_HANDOFF.md  SHALLOW_WATER.md  VALIDATION.md  call-structure.md  class-structure.md  readme_figures.py
docs/assets/: provenance.json
docs/validation/: latlon_backend_review.md  r3_characterization.md
src/planetary_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/planetary_sandbox/cli/: bve.py  clear_cache.py  generate_planet.py  main.py  pe.py  run_lifecycle.py  swe.py
src/planetary_sandbox/numerics/: __init__.py  cartesian_to_spherical.py  compute_optimal_weights.py  differential_operators_spherical.py  fast_geodesic_sh.py  fast_geodesic_shpy.bak  geodesic_grid.py  grid.py  grid_base.py  grid_interpolation.py  integration.py  latlon_grid.py  optimized_geodesic_sh.py  spectral_operators.py  spherical_backend.py  spherical_harmonics.py
src/planetary_sandbox/numerics/cuda/: cuda_utils.py  legendre.cu  sh_matrix.cu  sh_matrix_real.cu  sh_matrixcu.bak  sph_harm.cu
src/planetary_sandbox/physics/: primitive_equations.py  shallow_water.py  sigma_coordinate.py  topography.py
src/planetary_sandbox/planet/: __init__.py  elevation_data.py  planet.py  planetary_parameters.py  tectonics.py  terrain_spectral.py
src/planetary_sandbox/run/: engine.py
src/planetary_sandbox/run/bve/: __init__.py  barotropic_vorticity.py  config.py  diagnostics.py  initial_conditions.py  io.py  runner.py  visualization.py
src/planetary_sandbox/run/pe/: __init__.py  config.py  diagnostics.py  initial_conditions.py  runner.py  snapshot_visualization.py  visualization.py
src/planetary_sandbox/run/swe/: config.py  diagnostics.py  initial_conditions.py  runner.py  visualization.py
src/planetary_sandbox/viz/: __init__.py  complex_encoding.py  fields.py  grid_adapter.py  maps.py  matplotlib_renderer.py  normalization.py  planet_viewer.py  renderers.py  specs.py  timeline.py  vorticity_viewer.py
tests/: audit_r3_product.py  audit_r4_convergence.py  audit_r5_mechanism.py  consistency_test.py  debug_sh.py  speed_showdown.py  test_backend_parity.py  test_bve_cli_fallback.py  test_cli_aeolus.py  test_diagnostics.py  test_geometry_generalization.py  test_grid_interpolation.py  test_latlon_backend.py  test_latlon_run.py  test_latlon_transform.py  test_orthogonality.py  test_pe_acceptance.py  test_pe_diagnostics.py  test_pe_initial_conditions.py  test_pe_orographic_rest.py  test_pe_persistence.py  test_pe_run_config.py  test_pe_runner.py  test_pe_snapshot_levels.py  test_pe_snapshots.py  test_pe_tendency.py  test_pe_visualization.py  test_primitive_equations.py  test_provenance.py  test_r3_fine_product.py  test_r5_spectral_eta.py  test_run_directory.py  test_shallow_water.py  test_sigma_coordinate.py  test_spectral_encoding.py  test_spectral_operators.py  test_spherical_backend.py  test_spherical_harmonics_compare.py  test_swe_runner.py  test_swe_topography.py  (+3 more)
tests/cli/: conftest.py  test_catalogs.py  test_defaults.py  test_errors.py  test_execute_run.py  test_generate.py  test_help.py  test_inspect.py  test_pe.py  test_plots.py  test_presets.py  test_recompile.py  test_run_ids.py  test_schedules.py
tests/integration/: test_bve_controller.py  test_bve_runner.py
